--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -24,52 +24,130 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Border
-            BorderThickness="1"
-            BorderBrush="Black"
-            />
-        <Border
-            Background="Red"
-            BorderThickness="1"
-            BorderBrush="Black"
-            Grid.Column="1"
-            Grid.Row="1"
-            Grid.RowSpan="2"
-            Margin="5"
-            />
-        <Label
-            Grid.Column="1"
-            Margin="5"
-            FontWeight="Bold" FontSize="24"
-            Foreground="#FF281EFF"
-            VerticalContentAlignment="Center"
-            HorizontalContentAlignment="Center"
-            >
-            Label
-        </Label>
-        <TextBlock
-            Grid.Row="1"
-            TextWrapping="Wrap"
-            TextAlignment="Justify"
-            >
-            Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy Blok tekstowy
-        </TextBlock>
-        <TextBox
-            Margin="6"
+
+        <ScrollViewer
+            Grid.ColumnSpan="3"
             Grid.Row="2"
-            TextWrapping="Wrap"
-            FontSize="20"
+            Grid.RowSpan="3"
+            Margin="10,0,10,0"
+            VerticalScrollBarVisibility="Auto"
+            HorizontalScrollBarVisibility="Auto"
             >
-            TextBox
-        </TextBox>
-        <Button
-            Grid.Column="2"
-            Grid.Row="1"
-            Margin="5"
-            FontSize="16"
+            <StackPanel Orientation="Horizontal">
+                <Border
+                    Background="Red"
+                    BorderThickness="1"
+                    BorderBrush="Black"
+                    MinHeight="100"
+                    MinWidth="100"
+                    />
+                <Border
+                    Background="Blue"
+                    BorderThickness="1"
+                    BorderBrush="Black"
+                    MinHeight="100"
+                    MinWidth="100"
+                    />
+                <Border
+                    Background="Red"
+                    BorderThickness="1"
+                    BorderBrush="Black"
+                    MinHeight="100"
+                    MinWidth="100"
+                    />
+                <Border
+                    Background="Blue"
+                    BorderThickness="1"
+                    BorderBrush="Black"
+                    MinHeight="100"
+                    MinWidth="100"
+                    />
+                <Border
+                    Background="Red"
+                    BorderThickness="1"
+                    BorderBrush="Black"
+                    MinHeight="100"
+                    MinWidth="100"
+                    />
+                <Border
+                    Background="Blue"
+                    BorderThickness="1"
+                    BorderBrush="Black"
+                    MinHeight="100"
+                    MinWidth="100"
+                    />
+            </StackPanel>
+        </ScrollViewer>
+        <WrapPanel
+            Grid.ColumnSpan="3"
+            Grid.RowSpan="2"
+            Margin="10"
+            Background="#FFEAE4E4"
             >
-            Przycisk
-        </Button>
+            <Border
+                Background="Red"
+                BorderThickness="1"
+                BorderBrush="Black"
+                MinHeight="100"
+                MinWidth="100"
+                />
+            <Border
+                Background="Yellow"
+                BorderThickness="1"
+                BorderBrush="Black"
+                MinHeight="100"
+                MinWidth="100"
+                />
+            <Border
+                Background="Green"
+                BorderThickness="1"
+                BorderBrush="Black"
+                MinHeight="100"
+                MinWidth="100"
+                />
+            <Border
+                Background="Cyan"
+                BorderThickness="1"
+                BorderBrush="Black"
+                MinHeight="100"
+                MinWidth="100"
+                />
+            <Border
+                Background="Blue"
+                BorderThickness="1"
+                BorderBrush="Black"
+                MinHeight="100"
+                MinWidth="100"
+                />
+            <Border
+                Background="Magenta"
+                BorderThickness="1"
+                BorderBrush="Black"
+                MinHeight="100"
+                MinWidth="100"
+                />
+            <Border
+                Background="Black"
+                BorderThickness="1"
+                BorderBrush="Black"
+                MinHeight="100"
+                MinWidth="100"
+                />
+            <Border
+                Background="White"
+                BorderThickness="1"
+                BorderBrush="Black"
+                MinHeight="100"
+                MinWidth="100"
+                />
+            <Border
+                Background="Gray"
+                BorderThickness="1"
+                BorderBrush="Black"
+                MinHeight="100"
+                MinWidth="100"
+                />
+        </WrapPanel>
 
 
     </Grid>
