zasoby: styli, koloru, szablonu

--- a/App.xaml
+++ b/App.xaml
@@ -6,6 +6,8 @@
     StartupUri="MainWindow.xaml"
     >
     <Application.Resources>
+        <SolidColorBrush x:Key="NaszFiolet" Color="#FF8040DC"/>
+
         <Style TargetType="Label">
             <Setter Property="BorderBrush" Value="Red"/>
             <Setter Property="BorderThickness" Value="3"/>
@@ -34,5 +36,116 @@
             >
             <Setter Property="BorderBrush" Value="Green"/>
         </Style>
+        
+        <Style x:Key="FocusVisual">
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Rectangle
+                            Margin="2"
+                            StrokeDashArray="1 2"
+                            SnapsToDevicePixels="true"
+                            StrokeThickness="1"
+                            Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"
+                            />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        
+        <SolidColorBrush x:Key="Button.Static.Background" Color="#FFDDDDDD"/>
+        <SolidColorBrush x:Key="Button.Static.Border" Color="#FF707070"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFFDE6FD"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FFB17FB1"/>
+        <SolidColorBrush x:Key="Button.Pressed.Background" Color="#FFF6E5F6"/>
+        <SolidColorBrush x:Key="Button.Pressed.Border" Color="#FF8B628B"/>
+        <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
+        <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
+        <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
+        
+        <Style x:Key="NaszPrzycisk" TargetType="{x:Type Button}">
+            <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+            <Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
+            <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+            <Setter Property="BorderThickness" Value="3"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="1"/>
+            
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border
+                            x:Name="border"
+                            Background="{TemplateBinding Background}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            SnapsToDevicePixels="true"
+                            >
+                            <ContentPresenter
+                                x:Name="contentPresenter"
+                                Focusable="False"
+                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                Margin="{TemplateBinding Padding}"
+                                RecognizesAccessKey="True"
+                                SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsDefaulted" Value="true">
+                                <Setter
+                                    TargetName="border"
+                                    Property="BorderBrush"
+                                    Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"
+                                    />
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter
+                                    TargetName="border"
+                                    Property="Background"
+                                    Value="{StaticResource Button.MouseOver.Background}"
+                                    />
+                                <Setter
+                                    TargetName="border"
+                                    Property="BorderBrush"
+                                    Value="{DynamicResource NaszFiolet}"
+                                    />
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="true">
+                                <Setter
+                                    TargetName="border"
+                                    Property="Background"
+                                    Value="{StaticResource Button.Pressed.Background}"
+                                    />
+                                <Setter
+                                    TargetName="border"
+                                    Property="BorderBrush"
+                                    Value="{StaticResource Button.Pressed.Border}"
+                                    />
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter
+                                    TargetName="border"
+                                    Property="Background"
+                                    Value="{StaticResource Button.Disabled.Background}"
+                                    />
+                                <Setter
+                                    TargetName="border"
+                                    Property="BorderBrush"
+                                    Value="{StaticResource Button.Disabled.Border}"
+                                    />
+                                <Setter
+                                    TargetName="contentPresenter"
+                                    Property="TextElement.Foreground"
+                                    Value="{StaticResource Button.Disabled.Foreground}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    
     </Application.Resources>
 </Application>
