--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -43,7 +43,7 @@
             Grid.Row="4"
             Grid.Column="1"
             ></Border>
-        
+
         <WrapPanel
             Grid.Column="1"
             Grid.ColumnSpan="2"
@@ -58,12 +58,29 @@
                     <Setter Property="BorderThickness" Value="2"/>
                     <Setter Property="Foreground" Value="Blue"/>
                 </Style>
+                <SolidColorBrush x:Key="NaszFiolet" Color="#FFFF008B"/>
             </WrapPanel.Resources>
             <Label>Etykieta we wrappanelu</Label>
             <Label>E</Label>
             <Label>ty</Label>
             <Label>kie</Label>
             <Label>ty</Label>
+
+            <Button
+                Style="{DynamicResource NaszPrzycisk}"
+                Content="Button"
+                Grid.Column="2"
+                Grid.Row="4"
+                Margin="5"
+                Foreground="{StaticResource NaszFiolet}"
+                FontSize="20" 
+                />
         </WrapPanel>
+        <Button Style="{DynamicResource NaszPrzycisk}"
+            Content="Button"
+            Grid.Column="2"
+            Grid.Row="4"
+            Margin="5" Foreground="{StaticResource NaszFiolet}" FontSize="20" 
+            />
     </Grid>
 </Window>
