--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,10 +10,10 @@
     Title="Nasza aplikacja"
     Height="650"
     Width="400"
+    FontSize="24"
     >
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
@@ -23,64 +23,84 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
-        <Label>Etykieta</Label>
-        <Label Grid.Row="1">Kolejna</Label>
-        <Label Grid.Row="2">Jeszcze jedna</Label>
-        <Border Grid.Row="3"></Border>
-        <Border Grid.Row="3" Grid.Column="1"></Border>
-        <Border
-            Style="{StaticResource SpecjalnaRamka}"
-            Grid.Row="3"
-            Grid.Column="2"
-            ></Border>
-        <Border
-            Style="{StaticResource SpecjalnaRamka}"
-            Grid.Row="4"
-            ></Border>
-        <Border
-            Style="{StaticResource SpecjalniejszaRamka}"
-            Grid.Row="4"
-            Grid.Column="1"
-            ></Border>
 
-        <WrapPanel
+        <Label>Imię</Label>
+        <TextBox
             Grid.Column="1"
-            Grid.ColumnSpan="2"
-            Grid.RowSpan="3"
-            >
-            <WrapPanel.Resources>
-                <Style
-                    TargetType="Label"
-                    BasedOn="{StaticResource {x:Type Label}}"
-                    >
-                    <Setter Property="BorderBrush" Value="Green"/>
-                    <Setter Property="BorderThickness" Value="2"/>
-                    <Setter Property="Foreground" Value="Blue"/>
-                </Style>
-                <SolidColorBrush x:Key="NaszFiolet" Color="#FFFF008B"/>
-            </WrapPanel.Resources>
-            <Label>Etykieta we wrappanelu</Label>
-            <Label>E</Label>
-            <Label>ty</Label>
-            <Label>kie</Label>
-            <Label>ty</Label>
-
-            <Button
-                Style="{DynamicResource NaszPrzycisk}"
-                Content="Button"
-                Grid.Column="2"
-                Grid.Row="4"
-                Margin="5"
-                Foreground="{StaticResource NaszFiolet}"
-                FontSize="20" 
-                />
-        </WrapPanel>
-        <Button Style="{DynamicResource NaszPrzycisk}"
-            Content="Button"
-            Grid.Column="2"
-            Grid.Row="4"
-            Margin="5" Foreground="{StaticResource NaszFiolet}" FontSize="20" 
+            Text="{Binding
+                Path=Imię,
+                UpdateSourceTrigger=PropertyChanged,
+                Mode=TwoWay
+            }"
             />
+        <Button
+            Grid.Row="1"
+            >OK</Button>
+        <TextBlock
+            Style="{StaticResource Output}"
+            Grid.Row="1"
+            Grid.Column="1"
+            Text="{Binding
+                Path=Imię,
+                Mode=OneWay
+            }"
+            />
+        <Label Grid.Row="2">OneWay</Label>
+        <TextBox
+            Grid.Row="2"
+            Grid.Column="1"
+            Text="{Binding
+                Path=Imię,
+                Mode=OneWay
+            }"
+            />
+        <Label Grid.Row="3">OneWayToSrc</Label>
+        <TextBox
+            Grid.Row="3"
+            Grid.Column="1"
+            Text="{Binding
+                Path=Imię
+            }"
+            />
+        <Label Grid.Row="4">OneTime</Label>
+        <TextBox
+            Grid.Row="4"
+            Grid.Column="1"
+            Text="{Binding
+                Path=Imię,
+                Mode=OneTime
+            }"
+            />
+        
+        <Label Grid.Row="5">Zagnieżdżone</Label>
+        <TextBox
+            Grid.Row="5"
+            Grid.Column="1"
+            Text="{Binding Path=Coś.JakaśWłaściwość}"
+            />
+        <TextBlock
+            Style="{StaticResource Output}"
+            Grid.Row="6"
+            Grid.Column="1"
+            Text="{Binding Path=Coś.JakaśWłaściwość}"
+            />
+
+        <Label Grid.Row="7">Tablica</Label>
+        <TextBox
+            Grid.Row="7"
+            Grid.Column="1"
+            Text="{Binding Path=Tab[0]}"
+            />
+        <TextBlock
+            Grid.Row="8"
+            Grid.Column="1"
+            Text="{Binding Path=Tab[0]}"
+            />
+        
     </Grid>
 </Window>
