--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -29,78 +29,36 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Label>Imię</Label>
-        <TextBox
-            Grid.Column="1"
-            Text="{Binding
-                Path=Imię,
-                UpdateSourceTrigger=PropertyChanged,
-                Mode=TwoWay
-            }"
-            />
-        <Button
+        <Label Grid.Row="0" Grid.ColumnSpan="2">Dane 1-wymiarowe</Label>
+        <ListBox
             Grid.Row="1"
-            >OK</Button>
-        <TextBlock
-            Style="{StaticResource Output}"
-            Grid.Row="1"
-            Grid.Column="1"
-            Text="{Binding
-                Path=Imię,
-                Mode=OneWay
-            }"
-            />
-        <Label Grid.Row="2">OneWay</Label>
-        <TextBox
-            Grid.Row="2"
-            Grid.Column="1"
-            Text="{Binding
-                Path=Imię,
-                Mode=OneWay
-            }"
-            />
-        <Label Grid.Row="3">OneWayToSrc</Label>
-        <TextBox
-            Grid.Row="3"
-            Grid.Column="1"
-            Text="{Binding
-                Path=Imię
-            }"
-            />
-        <Label Grid.Row="4">OneTime</Label>
-        <TextBox
-            Grid.Row="4"
-            Grid.Column="1"
-            Text="{Binding
-                Path=Imię,
-                Mode=OneTime
-            }"
-            />
-        
-        <Label Grid.Row="5">Zagnieżdżone</Label>
-        <TextBox
+            Grid.ColumnSpan="2"
+            Grid.RowSpan="3"
+            ItemsSource="{Binding Tab}"
+            ></ListBox>
+        <Label Grid.Row="4" Grid.ColumnSpan="2">Dane 2-wymiarowe</Label>
+        <DataGrid
             Grid.Row="5"
-            Grid.Column="1"
-            Text="{Binding Path=Coś.JakaśWłaściwość}"
-            />
-        <TextBlock
-            Style="{StaticResource Output}"
-            Grid.Row="6"
-            Grid.Column="1"
-            Text="{Binding Path=Coś.JakaśWłaściwość}"
-            />
-
-        <Label Grid.Row="7">Tablica</Label>
-        <TextBox
-            Grid.Row="7"
-            Grid.Column="1"
-            Text="{Binding Path=Tab[0]}"
-            />
-        <TextBlock
-            Grid.Row="8"
-            Grid.Column="1"
-            Text="{Binding Path=Tab[0]}"
-            />
-        
+            Grid.ColumnSpan="2"
+            Grid.RowSpan="4"
+            ItemsSource="{Binding Lista}"
+            AutoGenerateColumns="False"
+            >
+            <DataGrid.Columns>
+                <DataGridTextColumn
+                    Header="Imię"
+                    Binding="{Binding Imię}"
+                    />
+                <DataGridTextColumn
+                    Header="Nazwisko"
+                    Binding="{Binding Nazwisko}"
+                    />
+                <DataGridTextColumn
+                    Header="Wiek"
+                    Binding="{Binding Wiek}"
+                    />
+            </DataGrid.Columns>
+        </DataGrid>
+            
     </Grid>
 </Window>
