--- a/App.xaml
+++ b/App.xaml
@@ -6,20 +6,28 @@
     StartupUri="MainWindow.xaml"
     >
     <Application.Resources>
-        <Style TargetType="Label">
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="Margin" Value="5"/>
-        </Style>
-        <Style TargetType="TextBlock" x:Key="Output">
+        <Style TargetType="TextBlock" x:Key="IO">
+            <Setter Property="TextAlignment" Value="Right"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="Margin" Value="5"/>
-            <Setter Property="Background" Value="Beige"/>
+            <Setter Property="Margin" Value="10"/>
         </Style>
         <Style TargetType="Button">
-            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Margin" Value="2"/>
         </Style>
-        <Style TargetType="TextBox">
-            <Setter Property="Margin" Value="5"/>
+        <Style
+            TargetType="Button"
+            x:Key="Cyfra"
+            BasedOn="{StaticResource {x:Type Button}}"
+            >
+            <Setter Property="Background" Value="Azure"/>
+        </Style>
+        <Style
+            TargetType="Button"
+            x:Key="Ważny"
+            BasedOn="{StaticResource {x:Type Button}}"
+            >
+            <Setter Property="Background" Value="Beige"/>
+            <Setter Property="Foreground" Value="Red"/>
         </Style>
     </Application.Resources>
 </Application>
